--- a/pd_ance1.html
+++ b/pd_ance1.html
@@ -11,11 +11,11 @@
     <body style="background-color:rgb(238, 208, 238);">
     <h1>Šodien ir pārbaudes darbs!</h1>
     <p>Vasara ir beigusies.</p>
-    <p>Skola ir sākusies.</p>
+    <p><i>Skola ir sākusies.</i></p>
     <p class="text-muted">Rudens</p>
     <p class="text-dark">Ziema</p>
     
-    <table>
+  <table>
         <tr>
           <th>diena</th>
           <th>stundu skaits</th>
@@ -46,27 +46,27 @@
             <td>7</td>
             <td>3</td>
         </tr>
-      </table>
+  </table>
 <div>
-    <ul>
+  <ul>
         <li>viens</li>
         <li>divi</li>
         <li>trīs</li>
-      </ul>
-      <ol>
+  </ul>
+  <ol>
         <li>matemātika</li>
         <li>sports</li>
         <li>fizika</li>
-      </ol>
-</div>
-<div>
+   </ol>
+  </div>
+  <div>
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR87B0BfoJvSwmLjhvYz8R0dpucRofOsJm_Gw&usqp=CAU" alt= "šeit ir 1 bilde">
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSqHen343zNBOZF86pvCjraAg_XY_rshxPFjA&usqp=CAU" alt= "šeit ir 2 bilde">
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQnz0JSXzgBTYiyX3Jz_ykQYZVxein-lwa1Aw&usqp=CAU" alt= "šeit ir 3 bilde">
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSfGY3kuWc81DdyKnauZjrYbous9qdlUa5Epg&usqp=CAU" alt= "šeit ir 4 bilde">
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR10_q5wOI2pfBHpShSspWSzJbV30foPwNHnA&usqp=CAU" alt= "šeit ir 5 bilde">
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQvnJEsYBLfTVkGs24oKSnFlExZ6ZhGirZAJA&usqp=CAU" alt= "šeit ir 6 bilde">
-</div>
+  </div>
 <button id='poga1' type="button" onclick="function1()">Mainīt lapas krāsu uz pelēku!</button> 
 <button id='poga2' type="button" onclick="function2()">Mainīt lapas krāsu uz baltu!</button> 
 <button id='poga3' type="button" onclick="function3()">zīmēt apli!</button> 
